--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h2 class="header"> welcome to São Paulo</h2>
+    <h2 > welcome to São Paulo</h2>
     <img src="https://abrilviagemeturismo.files.wordpress.com/2017/12/istock-842960000.jpg?quality=70&strip=info&w=680&h=453&crop=1" alt="Welcome to Sao Paulo"/>
     <h4>Featuring</h4>
-    <ol class="list">
+    <ol class ="element">
         <li>Restaurants</li>
         <li>Libraries</li>
         <li>Buildings</li>
@@ -20,7 +20,7 @@
         <h5>A little bit about Sao Paulo history:</h5>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo reprehenderit magni suscipit doloribus recusandae quam, perspiciatis neque quasi. Esse adipisci necessitatibus suscipit eligendi consequatur facilis earum perspiciatis accusamus corporis quidem! Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt cum natus nobis et assumenda architecto amet enim? Similique veniam et eveniet sunt nostrum adipisci inventore exercitationem aspernatur! Officia, ipsum illo? Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus laboriosam eaque adipisci, provident voluptas, iure fugit a dolorem, sunt excepturi alias rerum repudiandae. Reiciendis necessitatibus tempora sed aliquam voluptatibus quae. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur suscipit, optio autem similique ut sed quas cum voluptatum qui natus debitis possimus officia illo accusamus quam corrupti ea. Ratione, inventore?</p>
     </div>
-    <footer><h4>Come Visit!</h4></footer>
+    <footer class="element"><h4>Come Visit!</h4></footer>
     <script type = "text/javascript" src="dom_practice.js"></script>
 </body>
 </html>
